# taplo-bug

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  test-taplo.yml
backend/lambda/functions/handle_oms_read_model/: pyproject.toml
