[project]
    name            = "taplo-formatting-bug"
    version         = "0.1.0"
    description     = "Reproduction case for taplo formatting inconsistency"
    requires-python = ">=3.12"
    dependencies    = [ "fastapi>=0.116.2", "httpx>=0.28.1", "pydantic>=2.11.9" ]

[dependency-groups]
    dev = [ "pytest>=8.4.2", "ruff>=0.13.0" ]

[tool.pytest.ini_options]
    testpaths = [ "tests" ]
    python_files = "test_*.py"
    python_classes = "Test*"
    python_functions = "test_*"
    addopts = [
        "--cov-report=term-missing",
        "--disable-warnings",
        "--strict-markers",
        "--tb=short",
        "-v",
    ]
