[project]
    name = "handle-lambda-function"
    version = "0.1.0"
    description = "Lambda function for processing events"
    requires-python = "==3.12.*"
    dependencies = [
        "aws-lambda-powertools>=3.20.0",
        "boto3>=1.40.32",
        "botocore>=1.40.32",
        "pydantic>=2.11.9",
        "structlog>=25.4.0",
    ]

[build-system]
    requires      = [ "hatchling" ]
    build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
    packages = [ "lambda_function.py", "src" ]
